<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cinemapp Colombia</string>
    <string name="description">La aplicación que hace que ir al cine sea tan facil como estar alli.</string>
    <string name="start_pick_city">Selecciona la ciudad</string>
    <string name="start_pick_lang">Selecciona el idioma</string>
    <string name="beta">Version Beta</string>
    <string name="action_settings">Settings</string>

    <!-- Daydreams -->
    <string name="company">Daydreams ®</string>
    <string name="slogan">Beyond imagination</string>

    <!-- Nav Drawer Items -->
    <string name="nav_open">"Vestibulo"</string>

    <string-array name="nav_drawer_items">
        <item>Cartelera</item>
        <item>Generos</item>
        <item>Teatros</item>
        <item>Localizame</item>
        <item>Reportes</item>
        <item>Configurar</item>
        <item>Acerca</item>
    </string-array>

    <!-- Iconos de los items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_boxoffice</item>
        <item>@drawable/ic_genre</item>
        <item>@drawable/ic_theater</item>
        <item>@drawable/ic_mapme</item>
        <item>@drawable/ic_mailbox</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_about</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Box Office -->
    <string name="connection_error">Check your internet access</string>
    <string name="loading">Monos entrenados trabajando…</string>
    <string name="search_movie">Nombre, Director, Genero…</string>

    <!-- Movie Detail -->
    <string name="title_activity_movie_detail">Detalles</string>
    <string name="movie_description">Descripción:</string>
    <string name="movie_description_null">No disponible</string>
    <string name="movie_original">Nombre original:</string>
    <string name="movie_director">Director:</string>
    <string name="movie_cast">Elenco:</string>
    <string name="movie_genre">Genero:</string>
    <string name="movie_trailer">Trailer:</string>

    <!-- Map Me -->
    <string name="youre_here">"Estas aqui"</string>
    <string name="youre_here_snippet">"Selecciona el teatro deseado"</string>
    <string name="marker_snippet">Click aqui para ver detalles</string>

    <!-- Theater -->
    <string name="search_theater">Nombre, Cadena, Direccion…</string>

    <!-- Theater Detail -->
    <string name="title_activity_theater_detail">Detalles</string>
    <string name="theater_adress">Direccion:</string>
    <string name="theater_phone">Telefono:</string>
    <string name="theater_url">Sitio Web:</string>

    <!-- Showtimes -->
    <string name="title_activity_showtime">Funciones</string>

    <!-- Mailbox -->
    <string name="mailbox_send">"Enviar"</string>
    <string name="mailbox_desc">"En Daydreams te escuchamos, tus mensajes nos ayudan a mejorar día a día.
        \nSi quieres reportar un fallo, bug o inconveniente, o si simplemente quieres dejarnos una sugerencia o consejo, este es el lugar.  Ayuda a que nuestros desarrolladores no se sientan solos, estaremos esperando tus mensajes :) </string>

    <!-- About -->
    <string name="legal_advice">"Brought to you by Daydreams®, beyond imagination.
    \nTodos los derechos reservados © 2014 Cinemapp Colombia y todas sus filiales.
    \nCinemapp Colombia no representa a ninguna de las empresas o compañias aqui mostradas, ni tiene ningun vinculo directo con alguna de estas, todos los datos aqui mostrados son explicitamente informativos y no busca con estos el lucro o beneficio de forma alguna, indistinta de la aplicacion.</string>
    <string name="title_activity_activity_daydreams">ActivityDaydreams</string>

</resources>
