<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/theater_activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    android:background="@color/movie_detail_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/theater_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textColor="@color/background_text"
            android:textSize="@dimen/movie_name"
            android:gravity="center_vertical|center_horizontal" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_adress_title"
            android:layout_below="@+id/theater_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_text"
            android:text="@string/theater_adress"
            android:textStyle="bold"
            android:textSize="@dimen/movie_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_adress"
            android:layout_below="@+id/theater_adress_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_phone_title"
            android:layout_below="@+id/theater_adress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_text"
            android:text="@string/theater_phone"
            android:textStyle="bold"
            android:textSize="@dimen/movie_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_phone"
            android:layout_below="@+id/theater_phone_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_url_title"
            android:layout_below="@+id/theater_phone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_text"
            android:text="@string/theater_url"
            android:textStyle="bold"
            android:textSize="@dimen/movie_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theater_url"
            android:layout_below="@+id/theater_url_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/background_light" />
    </RelativeLayout>

</ScrollView>
